--- a/apps/animeta/ingress.yaml
+++ b/apps/animeta/ingress.yaml
@@ -2,8 +2,8 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   annotations:
-    certmanager.k8s.io/acme-challenge-type: http01
-    certmanager.k8s.io/issuer: letsencrypt-prod
+    cert-manager.io/acme-challenge-type: http01
+    cert-manager.io/issuer: letsencrypt-prod
     nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
   name: animeta
 spec:
