--- a/apps/animeta/deployment-backend.yaml
+++ b/apps/animeta/deployment-backend.yaml
@@ -5,7 +5,6 @@ metadata:
   labels:
     app: animeta-backend
     keel.sh/policy: force
-    keel.sh/trigger: poll
 spec:
   replicas: 1
   selector:
@@ -18,7 +17,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: sapzilorg/animeta-backend:latest
+        image: gcr.io/ditto-1470749749381/animeta-backend
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
