Less memory requests for rolling deployment

--- a/apps/animeta/deployment-backend.yaml
+++ b/apps/animeta/deployment-backend.yaml
@@ -32,6 +32,8 @@ spec:
         resources:
           limits:
             memory: "512Mi"
+          requests:
+            memory: "256Mi"
         readinessProbe:
           httpGet:
             path: /actuator/health
