animeta: add sessionCookieDomain to frontend config

--- a/apps/animeta/frontend-config.json.sample
+++ b/apps/animeta/frontend-config.json.sample
@@ -7,5 +7,6 @@
     "daumAPIKey": "",
     "assetBase": "",
     "staticUrl": "",
-    "kakaoApiKey": ""
+    "kakaoApiKey": "",
+    "sessionCookieDomain": ".animeta.net"
 }
