Add node affinity

--- a/apps/animeta/deployment-backend.yaml
+++ b/apps/animeta/deployment-backend.yaml
@@ -46,3 +46,13 @@ spec:
       - name: secret
         secret:
           secretName: animeta
+      affinity:
+        nodeAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 100
+            preference:
+              matchExpressions:
+              - key: node-role.kubernetes.io/master
+                operator: NotIn
+                values:
+                - "true"
