--- a/apps/animeta/frontend-config.json.sample
+++ b/apps/animeta/frontend-config.json.sample
@@ -5,6 +5,7 @@
     },
     "sentryDsn": "",
     "sentryDsnNew": "",
+    "frontendSentryDsn": "",
     "daumAPIKey": "",
     "assetBase": "",
     "staticUrl": "",
