--- a/apps/animeta/frontend-config.json.sample
+++ b/apps/animeta/frontend-config.json.sample
@@ -2,6 +2,7 @@
     "backend": {
         "baseUrl": "http://animeta-backend:8080",
         "v4BaseUrl": "http://animeta-backend-ts:8081/api/v4",
+        "graphqlUrl": "http://animeta-backend-ts:8081/api/graphql",
         "remote": false
     },
     "sentryDsn": "",
