[animeta] add secret key to backend-ts

--- a/apps/animeta/deployment-backend-ts.yaml
+++ b/apps/animeta/deployment-backend-ts.yaml
@@ -24,6 +24,11 @@ spec:
         env:
         - name: NODE_ENV
           value: production
+        - name: ANIMETA_SECURITY_SECRET_KEY
+          valueFrom:
+            secretKeyRef:
+              name: animeta
+              key: 'animeta.security.secret-key'
         resources:
           limits:
             memory: "512Mi"
