--- a/apps/animeta/deployment-backend-ts.yaml
+++ b/apps/animeta/deployment-backend-ts.yaml
@@ -26,6 +26,10 @@ spec:
           value: production
         - name: SENTRY_DSN
           value: "https://deb70af1222e49a98b699584f9819f79@o120476.ingest.sentry.io/6187990"
+        - name: GOOGLE_APPLICATION_CREDENTIALS
+          value: /app/secrets/google-credentials.json
+        - name: ANIMETA_MEDIA_STORAGE_URL
+          value: "gs://animeta-static/media/"
         envFrom:
         - secretRef:
             name: animeta-backend-ts
@@ -43,6 +47,8 @@ spec:
         - mountPath: /app/backend-ts/ormconfig.json
           name: secret
           subPath: backend-ts-ormconfig.json
+        - mountPath: /app/secrets
+          name: secret
       volumes:
       - name: secret
         secret:
