animeta: new backend-ts server

--- a/apps/animeta/deployment-backend-ts.yaml
+++ b/apps/animeta/deployment-backend-ts.yaml
@@ -21,6 +21,7 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 8081
+        - containerPort: 8082
         env:
         - name: NODE_ENV
           value: production
