--- a/apps/animeta/frontend-config.json.sample
+++ b/apps/animeta/frontend-config.json.sample
@@ -3,6 +3,7 @@
         "baseUrl": "http://animeta-backend:8080",
         "v4BaseUrl": "http://animeta-backend-ts:8081/api/v4",
         "adminNewBaseUrl": "http://animeta-backend-ts:8081/api/admin/v0",
+        "adminNewBaseUrl2": "http://animeta-backend-ts:8082/api/admin/v1",
         "graphqlUrl": "http://animeta-backend-ts:8081/api/graphql",
         "remote": false
     },
