--- a/apps/animeta/service-backend-ts.yaml
+++ b/apps/animeta/service-backend-ts.yaml
@@ -10,3 +10,8 @@ spec:
   - protocol: TCP
     port: 8081
     targetPort: 8081
+    name: http
+  - protocol: TCP
+    port: 8082
+    targetPort: 8082
+    name: http2
