animeta: backend-ts indexer cronjob

--- a/apps/animeta/cronjob.yaml
+++ b/apps/animeta/cronjob.yaml
@@ -13,15 +13,32 @@ spec:
           restartPolicy: OnFailure
           containers:
             - name: call
-              image: appropriate/curl
-              args:
-                - '-XPOST'
-                - 'http://animeta-backend.default:8080/admin/tasks/buildIndex'
-                - '-u'
-                - 'admin:$(INTERNAL_PASSWORD)'
+              image: gcr.io/ditto-1470749749381/animeta-backend-ts
+              command: ['node', 'dist/backend-ts/src2/commands/indexer.js']
               env:
-                - name: INTERNAL_PASSWORD
-                  valueFrom:
-                    secretKeyRef:
-                      name: animeta
-                      key: 'animeta.security.internal-password'
+              - name: NODE_ENV
+                value: production
+              - name: SENTRY_DSN
+                value: "https://deb70af1222e49a98b699584f9819f79@o120476.ingest.sentry.io/6187990"
+              - name: GOOGLE_APPLICATION_CREDENTIALS
+                value: /app/secrets/google-credentials.json
+              - name: ANIMETA_MEDIA_STORAGE_URL
+                value: "gs://animeta-static/media/"
+              envFrom:
+              - secretRef:
+                  name: animeta-backend-ts
+              volumeMounts:
+              - mountPath: /app/backend-ts/ormconfig.json
+                name: secret
+                subPath: backend-ts-ormconfig.json
+              - mountPath: /app/secrets
+                name: secret
+              resources:
+                limits:
+                  memory: "512Mi"
+                requests:
+                  memory: "256Mi"
+          volumes:
+          - name: secret
+            secret:
+              secretName: animeta-backend-ts
