animeta: add backup storage env

--- a/apps/animeta/deployment-backend-ts.yaml
+++ b/apps/animeta/deployment-backend-ts.yaml
@@ -31,6 +31,8 @@ spec:
           value: /app/secrets/google-credentials.json
         - name: ANIMETA_MEDIA_STORAGE_URL
           value: "gs://animeta-static/media/"
+        - name: ANIMETA_BACKUP_STORAGE_URL
+          value: "gs://animeta-user-backup/"
         envFrom:
         - secretRef:
             name: animeta-backend-ts
