--- a/apps/animeta/kustomization.yaml
+++ b/apps/animeta/kustomization.yaml
@@ -23,9 +23,10 @@ configMapGenerator:
 resources:
   - deployment-backend-ts.yaml
   - service-backend-ts.yaml
-  - deployment-frontend.yaml
   - service-frontend.yaml
+  - service-lambda.yaml
   - ingress.yaml
+  - ingress-api.yaml
   - cronjob.yaml
 
 # namespace to deploy all Resources to
