Revert "animeta: proxy frontend to lambda"
This reverts commit 0cbb8a070d2d4253c9bfdbf98282762e5a2219aa.

--- a/apps/animeta/kustomization.yaml
+++ b/apps/animeta/kustomization.yaml
@@ -23,10 +23,9 @@ configMapGenerator:
 resources:
   - deployment-backend-ts.yaml
   - service-backend-ts.yaml
+  - deployment-frontend.yaml
   - service-frontend.yaml
-  - service-lambda.yaml
   - ingress.yaml
-  - ingress-api.yaml
   - cronjob.yaml
 
 # namespace to deploy all Resources to
