--- a/apps/animeta/ingress.yaml
+++ b/apps/animeta/ingress.yaml
@@ -4,8 +4,6 @@ metadata:
   annotations:
     cert-manager.io/acme-challenge-type: http01
     cert-manager.io/issuer: letsencrypt-prod
-    nginx.ingress.kubernetes.io/backend-protocol: https
-    nginx.ingress.kubernetes.io/upstream-vhost: animeta.net
     nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
   name: animeta
 spec:
@@ -14,8 +12,8 @@ spec:
     http:
       paths:
       - backend:
-          serviceName: animeta-lambda
-          servicePort: 443
+          serviceName: animeta-frontend
+          servicePort: 3000
         path: /
   tls:
   - hosts:
