--- a/apps/animeta/ingress.yaml
+++ b/apps/animeta/ingress.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
@@ -7,14 +7,18 @@ metadata:
     nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
   name: animeta
 spec:
+  ingressClassName: nginx
   rules:
   - host: animeta.net
     http:
       paths:
       - backend:
-          serviceName: animeta-frontend
-          servicePort: 3000
+          service:
+            name: animeta-frontend
+            port:
+              number: 3000
         path: /
+        pathType: Prefix
   tls:
   - hosts:
     - animeta.net
