--- a/helm/helmfile.yaml
+++ b/helm/helmfile.yaml
@@ -19,14 +19,18 @@ releases:
 - name: nginx-ingress
   namespace: nginx-ingress
   chart: ingress-nginx/ingress-nginx
-  version: 3.15.2
-  values:
-  - nginx-ingress/values.yaml
+  version: 4.4.0
+  set:
+    - name: controller.ingressClassResource.default
+      value: "true"
 
 - name: cert-manager
   namespace: cert-manager
   chart: jetstack/cert-manager
-  version: v0.15.0
+  version: v1.10.0
+  set:
+    - name: installCRDs
+      value: "true"
 
 - name: keel
   namespace: kube-system
