--- a/apps/animeta/cronjob.yaml
+++ b/apps/animeta/cronjob.yaml
@@ -5,7 +5,7 @@ metadata:
   name: animeta-cronjob-build-index
 spec:
   # minute hour dayOfMonth month dayOfWeek (should be UTC!)
-  schedule: "*/5 * * * *" # every 5 minutes
+  schedule: "0 * * * *" # every hour
   jobTemplate:
     spec:
       template:
