--- a/apps/animeta/cronjob.yaml
+++ b/apps/animeta/cronjob.yaml
@@ -31,6 +31,10 @@ spec:
               - mountPath: /app/backend-ts/ormconfig.json
                 name: secret
                 subPath: backend-ts-ormconfig.json
+              # for pnpm based build
+              - mountPath: /app/ormconfig.json
+                name: secret
+                subPath: backend-ts-ormconfig.json
               - mountPath: /app/secrets
                 name: secret
               resources:
