--- a/apps/animeta/deployment-frontend.yaml
+++ b/apps/animeta/deployment-frontend.yaml
@@ -25,6 +25,8 @@ spec:
           value: "3000"
         - name: ANIMETA_CONFIG_PATH
           value: /app/conf/frontend-config.json
+#        - name: MAINTENANCE
+#          value: "07-02 12:00"
         resources:
           limits:
             memory: "128Mi"
