--- a/manifests/redirect.yaml
+++ b/manifests/redirect.yaml
@@ -20,4 +20,13 @@ spec:
     - host: dittos.pe.kr
     - host: www.dittos.pe.kr
     - host: sapzil.org
+      http:
+        paths:
+        - path: /
+          pathType: Prefix
+          backend:
+            service:
+              name: mastodon-web
+              port:
+                number: 3000
     - host: www.sapzil.org
