add bluesky-pds chart

--- a/env.yaml.sample
+++ b/env.yaml.sample
@@ -6,3 +6,11 @@ commonSecret: ""
 mastodon:
   vapidPrivateKey: ""
   vapidPublicKey: ""
+
+blueskyPds:
+  # openssl rand --hex 16
+  jwtSecret: ""
+  # openssl rand --hex 16
+  adminPassword: ""
+  # openssl ecparam --name secp256k1 --genkey --noout --outform DER | tail --bytes=+8 | head --bytes=32 | xxd --plain --cols 32
+  plcRotationKey: ""
