animeta: expose api

--- a/apps/animeta/kustomization.yaml
+++ b/apps/animeta/kustomization.yaml
@@ -26,6 +26,7 @@ resources:
   - deployment-frontend.yaml
   - service-frontend.yaml
   - ingress.yaml
+  - ingress-api.yaml
   - cronjob.yaml
 
 # namespace to deploy all Resources to
