animeta: set livenessProbe

--- a/apps/animeta/deployment-frontend.yaml
+++ b/apps/animeta/deployment-frontend.yaml
@@ -25,12 +25,17 @@ spec:
           value: "3000"
         - name: ANIMETA_CONFIG_PATH
           value: /app/conf/frontend-config.json
-#        - name: MAINTENANCE
-#          value: "07-02 12:00"
+        # - name: MAINTENANCE
+        #   value: "07-06 03:00"
         resources:
           limits:
             memory: "128Mi"
         readinessProbe:
+          httpGet:
+            path: /healthz
+            port: 3000
+          initialDelaySeconds: 10
+        livenessProbe:
           httpGet:
             path: /healthz
             port: 3000
